# gazelle_py

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  REPO.bazel  go.mod  go.sum
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/workflows/: ci.yaml  module_release.yaml  publish_to_bcr_pinned.yaml  release_prep.sh  release_ruleset_pinned.yaml
bcr_test/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
crates/import_extractor/: BUILD.bazel  Cargo.toml  README.md  ffi_symbols_test.go  opt.bzl
crates/import_extractor/src/: ffi.rs  lib.rs  py.rs  wire.rs
examples/: README.md
examples/basic/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/basic/myapp/: BUILD.bazel  app.py  app_test.py  conftest.py
examples/composite/: .bazelrc  .gitignore  MODULE.bazel  README.md
examples/cross_compile/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/edge_cases/: .bazelrc  MODULE.bazel  README.md
examples/file_mode/: MODULE.bazel  README.md
examples/file_mode/calc/: BUILD.bazel  add.py  add_test.py  helpers.py  mul.py
examples/naming_conventions/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/naming_conventions/widgets/empty_only/: __init__.py
examples/naming_conventions/widgets/empty_tree/: BUILD.bazel
examples/naming_conventions/widgets/helpers/: BUILD.bazel  __init__.py  helpers.py
examples/naming_conventions/widgets/relative/: BUILD.bazel  __init__.py  core.py  helpers_local.py  relative_spec.py
examples/naming_conventions/widgets/widget/: BUILD.bazel  __init__.py  widget.py  widget_spec.py
examples/project_mode/: BUILD.bazel  (+2 more)
examples/project_mode/myproj/: BUILD.bazel  main.py  main_test.py
examples/project_mode/myproj/models/: user.py
examples/project_mode/myproj/utils/: format.py
examples/toolchain_override/: BUILD.bazel  MODULE.bazel  README.md  active_rustc_version_test.sh
proto/: BUILD.bazel  message.proto
py/: BUILD.bazel  README.md  annotations.go  annotations_test.go  benchmark_test.go  config.go  config_test.go  configure.go  fix.go  gazelle_tests.bzl  generate.go  generate_test.go  import_extractor.go  imports.go  imports_test.go  kinds.go  language.go  manifest.go  manifest_test.go  parser.go  resolve.go  resolve_test.go  rule_plan.go  source_facts.go  source_ownership.go  sources.go  stdlib.go
py/gazelle_test/: BUILD.bazel  gazelle_test.go
py/gazelle_test/testdata/: README.md
py/gazelle_test/testdata/annotation_include_dep/pkg/: BUILD.out  foo.py
py/gazelle_test/testdata/composite/: WORKSPACE
py/gazelle_test/testdata/composite/apps/web/: BUILD.out  server.py  server_test.py
py/gazelle_test/testdata/directive_python_test_file_pattern/: BUILD.in
py/gazelle_test/testdata/directive_python_test_file_pattern/widget/: BUILD.out  widget.py  widget_spec.py
py/gazelle_test/testdata/directive_python_visibility/: BUILD.in
py/gazelle_test/testdata/directive_python_visibility/lib/: BUILD.out
py/gazelle_test/testdata/edge_cases/mylib/: BUILD.out  lib.py  lib_test.py
py/gazelle_test/testdata/explicit_init_alias_owner/: BUILD.out
py/gazelle_test/testdata/explicit_init_alias_owner/app/: BUILD.in  BUILD.out  app.py
py/gazelle_test/testdata/explicit_init_alias_owner/pkg/api/: BUILD.in  __init__.py
py/gazelle_test/testdata/file_pattern_precise_providers/app/: BUILD.in  BUILD.out
py/gazelle_test/testdata/file_pattern_precise_providers/app/openapi/: BUILD.in  BUILD.out  _bootstrap.py  main.py  main_test.py
py/gazelle_test/testdata/first_party_dependencies/app/: BUILD.out  server.py
py/gazelle_test/testdata/first_party_dependencies/lib/util/: util.py
py/gazelle_test/testdata/generation_mode_off/: BUILD.in  MODULE.bazel
py/gazelle_test/testdata/generation_mode_off/pkg/: BUILD.in
py/gazelle_test/testdata/generation_mode_off/pkg/enabled/: BUILD.out  enabled.py
py/gazelle_test/testdata/hand_rolled_package_targets/pkg/: BUILD.in  BUILD.out
py/gazelle_test/testdata/manifest_resolution/: BUILD.in  gazelle_python.yaml
py/gazelle_test/testdata/manifest_resolution/pkg/: BUILD.out  foo.py
py/gazelle_test/testdata/mapped_ignored_package_owner/: BUILD.in
py/gazelle_test/testdata/mapped_ignored_package_owner/app/: BUILD.out  handler.py
py/gazelle_test/testdata/mapped_ignored_package_owner/lib/: BUILD.in  BUILD.out
py/gazelle_test/testdata/mapped_ignored_package_owner/lib/special/: BUILD.in  helper.py
py/gazelle_test/testdata/naming_convention/: BUILD.out
py/gazelle_test/testdata/naming_convention/widget/: BUILD.out
py/gazelle_test/testdata/per_file/calc/: BUILD.out  add_test.py  mul.py
py/gazelle_test/testdata/project_deps_gate/: pyproject.toml
py/gazelle_test/testdata/project_deps_gate/pkg/: BUILD.out  foo.py
py/gazelle_test/testdata/project_mode/myproj/: BUILD.in  BUILD.out  main.py  main_test.py
py/gazelle_test/testdata/project_mode/myproj/models/: user.py
py/gazelle_test/testdata/project_mode/myproj/utils/: format.py
py/gazelle_test/testdata/project_mode_hand_rolled_targets/pkg/: BUILD.in  BUILD.out
py/gazelle_test/testdata/relative_imports/: BUILD.out
py/gazelle_test/testdata/relative_imports/relative/: BUILD.out  core.py  helpers_local.py
py/gazelle_test/testdata/sibling_pip_label_convention/data/: BUILD.out  gazelle_python.yaml
py/gazelle_test/testdata/sibling_pip_label_convention/data/ai_training/: BUILD.in  BUILD.out  job.py
py/gazelle_test/testdata/sibling_pip_label_convention/service/: BUILD.out  app.py
py/gazelle_test/testdata/simple_library/simple_library/: BUILD.out  foo.py
py/gazelle_test/testdata/simple_test/myapp/: BUILD.out  foo_test.py
py/gazelle_test/testdata/simple_test_with_conftest/myapp/: BUILD.out  app_test.py  conftest.py
py/gazelle_test/testdata/skip_empty_init_project/empty_tree/: BUILD.out
py/gazelle_test/testdata/with_std_requirements/pkg/: BUILD.out  foo.py
py/gazelle_test/testdata/with_third_party_requirements/pkg/: BUILD.out  foo.py
py/proto/: BUILD.bazel  stub.go
py/pureftests/: funcs.go  go.mod  helpers_test.go  normalize_test.go  requirement_test.go
(+6 files in other folders)
