[workspace]
resolver = "2"
members = [
    "crates/import_extractor",
]

[workspace.package]
edition = "2024"
# Floor matches ruff 0.15.10's own rust-version — we don't use anything beyond
# what ruff requires, so the right floor is theirs. Edition 2024 itself only
# needs 1.85+; ruff is the binding constraint.
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/hermeticbuild/gazelle_py"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"

[workspace.dependencies]
# Python parsing (ruff). Pinned to a tagged ruff release rather than a
# crates.io version because ruff's parser crates aren't published.
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }

# Proto / RPC
# Pinned to 0.13.1 to match the prost runtime that rules_rs's rust_prost_library
# generates against (its bundled rrprd repo). Mismatched versions produce
# trait-path conflicts at link time.
prost = "=0.13.1"
prost-types = "=0.13.1"

# Shared
rayon = "1.12"
