module(
    name = "gazelle_py_bcr_test",
    version = "0.0.0",
)

# Pulls in the published gazelle_py via the surrounding tarball. BCR's
# `bcr_test_module` flow extracts the source archive at the repo root and
# cd's into this directory, so `path = ".."` lands us back on the just-
# released module.
bazel_dep(name = "gazelle_py", version = "0.0.0")
local_path_override(
    module_name = "gazelle_py",
    path = "..",
)

# Source of @llvm//constraints/libc:gnu.2.28 — used by //platforms:local_gnu
# below, which we pin as host_platform on Linux to satisfy rules_rs's Rust
# toolchain target_compatible_with.
bazel_dep(name = "llvm", version = "0.7.3")
bazel_dep(name = "platforms", version = "1.0.0")
