load("@rules_proto//proto:defs.bzl", "proto_library")

# Standalone proto target used by both the Rust crate (//crates/import_extractor,
# via rust_prost_library) and the Go gazelle plugin (//py/proto, via
# go_proto_library). Schema is the wire format both sides marshal to/from
# when the cgo dispatch crosses the FFI boundary.
proto_library(
    name = "import_extractor_proto",
    srcs = ["message.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)
