load("@rules_go//go:def.bzl", "go_test")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")
load(":opt.bzl", "opt_rust_static_library")

# proto_library lives at //proto:import_extractor_proto so that //py/proto can
# depend on it without loading any rules_rs symbols.
rust_prost_library(
    name = "import_extractor_rust_proto",
    proto = "//proto:import_extractor_proto",
    visibility = ["//visibility:public"],
)

_LIB_SRCS = [
    "src/ffi.rs",
    "src/lib.rs",
    "src/py.rs",
    "src/wire.rs",
]

_LIB_DEPS = [
    ":import_extractor_rust_proto",
    # Use the same prost runtime as rust_prost_library — sharing identical
    # versions across separate crate.from_cargo invocations isn't enough,
    # they're distinct repo instances and Rust treats them as different types.
    "@rules_rs//rs/private/prost:prost_runtime",
    "@gazelle_py_crates//:ruff_python_ast",
    "@gazelle_py_crates//:ruff_python_parser",
    "@gazelle_py_crates//:ruff_text_size",
    "@gazelle_py_crates//:rayon",
]

# rlib variant — used by the unit tests.
rust_library(
    name = "import_extractor",
    srcs = _LIB_SRCS,
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = _LIB_DEPS,
)

# staticlib variant — linked into the gazelle plugin's go_library via cgo.
# Provides CcInfo so it can be passed directly as `cdeps` on go_library.
# opt_rust_static_library is a with_cfg wrapper that pins compilation_mode
# and the release rustc flags so the staticlib is optimized regardless of
# the consumer's bazel invocation (see opt.bzl).
opt_rust_static_library(
    name = "import_extractor_static",
    srcs = _LIB_SRCS,
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = _LIB_DEPS,
)

genrule(
    name = "ffi_symbols_nm",
    srcs = [":import_extractor_static"],
    outs = ["ffi_symbols_nm.txt"],
    cmd = "nm -g $(location :import_extractor_static) > $@ 2>&1 || true",
)

rust_test(
    name = "test",
    crate = ":import_extractor",
)

go_test(
    name = "ffi_symbols_test",
    srcs = ["ffi_symbols_test.go"],
    args = ["-symbols=$(location :ffi_symbols_nm)"],
    data = [":ffi_symbols_nm"],
    importpath = "github.com/hermeticbuild/gazelle_py/crates/import_extractor/ffi_symbols_test",
)
