load("@gazelle//:def.bzl", "gazelle_binary")

# Builds a gazelle binary linking the python plugin. The point of this
# example is to exercise cross-compiling gazelle_py to darwin from any host:
#
#   bazel build --platforms=@rules_rs//rs/platforms:aarch64-apple-darwin //:gazelle_bin
#   bazel build --platforms=@rules_rs//rs/platforms:x86_64-apple-darwin  //:gazelle_bin
#
# Without gazelle_py's `use_repo(osx, "macos_sdk")` re-export, analysis fails
# with `No repository visible as '@macos_sdk' from repository '@@gazelle_py+'`
# under rules_rs >= 0.0.64.
gazelle_binary(
    name = "gazelle_bin",
    languages = ["@gazelle_py//py"],
    visibility = ["//visibility:public"],
)
