module(
    name = "cross_compile_example",
    version = "0.0.0",
)

# Direct rules_rs pin so this example exercises the cross-compile path
# against the same version gazelle_py declares — `--platforms=...darwin`
# analysis must resolve the macOS rust toolchain's `@macos_sdk//sysroot`
# reference cleanly from `@@gazelle_py+`.
bazel_dep(name = "rules_rs", version = "0.0.73")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "llvm", version = "0.7.6")
bazel_dep(name = "gazelle_py", version = "0.0.0")
local_path_override(
    module_name = "gazelle_py",
    path = "../..",
)

# Register @llvm's hermetic clang toolchain so analysis can resolve a cc
# toolchain for darwin targets on a non-darwin host (e.g. CI on linux).
# Without this, `--nobuild --platforms=...:aarch64-apple-darwin` fails
# during toolchain resolution before reaching the @macos_sdk reference
# we actually want this example to exercise.
register_toolchains("@llvm//toolchain:all")
