load("@rules_python//python:defs.bzl", "py_library", "py_test")

# Switch on per-file rule generation for everything under //calc.
# gazelle:python_generation_mode file

py_library(
    name = "add",
    srcs = ["add.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "helpers",
    srcs = ["helpers.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "mul",
    srcs = ["mul.py"],
    visibility = ["//visibility:public"],
    deps = [":add"],
)

py_test(
    name = "add_test",
    srcs = ["add_test.py"],
    main = "add_test.py",
    deps = [
        ":add",
        ":helpers",
        ":mul",
    ],
)
